Adjusted the buttons sizes

--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -18,7 +18,7 @@ $breakpoint: 768px;
     justify-content: space-between;
     align-items: center;
     position: relative;
-    font-size: $font-size-md + 2px;
+    font-size: $font-size-md;
     border-radius: 0;
 
     &__brand {
