--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -149,7 +149,7 @@
                             flex-wrap: wrap;
 
                             .online {
-                                padding: $spacing-xs - 2px $spacing-md;
+                                padding: $spacing-xs $spacing-md;
                                 background-color: $light-secondery-bg-color;
                                 border-radius: $spacing-xs - 1px;
                                 font-size: $font-size-xs;
