--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -81,7 +81,7 @@
                         margin-left: $spacing-sm;
 
                         .view {
-                            padding: $spacing-xs - 2px $spacing-md;
+                            padding: $spacing-xs $spacing-md;
                             background-color: $light-secondery-bg-color;
                             border-radius: $spacing-xs - 1px;
                             font-size: $font-size-xs;
