Adjusted the global font sizes

--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -38,6 +38,7 @@
 
             .set-container {
                 padding: 4px $spacing-sm;
+                  font-size: $font-size-md;
 
                 i {
                     padding-right: 3px;
