--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -70,7 +70,7 @@
                 }
 
                 .project-description {
-
+                     font-size: $font-size-md;
                     .project-views {
                         display: flex;
                         flex-direction: row;
@@ -103,7 +103,7 @@
             }
 
             .top-right-details {
-
+                     font-size: $font-size-md;
                 .details {
                     border-left: 5px solid red;
                     padding: 0 $spacing-sm;
@@ -347,7 +347,7 @@
 
                 .project-details-container {
                     .project-view-btns {
-
+                        column-gap: 10px;
                         .git-hub-repo {
                             background-color: $light-dark-bg-color;
                         }
@@ -450,7 +450,7 @@
                         column-gap: 4px;
 
                         .view-btn {
-                              padding: $spacing-xs - 2px $spacing-sm - 2px;
+                            padding: $spacing-xs - 2px $spacing-sm - 2px;
                             min-width: 25px;
                         }
 
@@ -602,11 +602,11 @@
 
                     .project-view-btns {
                         justify-content: flex-start;
-                        column-gap: 5px;
+                        column-gap: 10px;
 
                         .view-btn {
                             min-width: 45px;
-                              padding: $spacing-xs $spacing-sm - 2px;
+                            padding: $spacing-xs - 1px $spacing-sm;
                         }
 
                         .details {
@@ -645,10 +645,9 @@
             .project-container {
                 .project-details-container {
                     .project-view-btns {
-                        column-gap: 4px;
+                        // column-gap: 4px;
 
                         .view-btn {
-                            padding: $spacing-xs $spacing-sm - 2px;
                             min-width: 30px;
                         }
                     }
