Enhance the style by implementing mixins

--- a/src/app/features/contact/pages/contact/contact.component.html
+++ b/src/app/features/contact/pages/contact/contact.component.html
@@ -6,7 +6,7 @@
 
       <div *ngIf="emptyForm" class="invalid-form-message">
         <i class="bi bi-exclamation-square-fill"></i>
-        Please ensure the form is completed.
+        Please complete all required fields.
       </div>
 
       <div class="contact-info">
