--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -76,15 +76,15 @@
 
             <div class="online-options" >
 
-              <div class="online git-hub-repo" (click)="openHyperLink(project.hyperlinks[0])">
+              <div class="online git-btn" (click)="openHyperLink(project.hyperlinks[0])">
                 <i class="bi bi-github"></i> GitHub
               </div>
 
-              <div class="online more" (click)="redirectToProjects()" >
+              <div class="online detail-btn" (click)="redirectToProjects()" >
                 <i class="bi bi-bookmark"></i> Details
               </div>
 
-              <div class="online live-site" (click)="openHyperLink(project.hyperlinks[1])">
+              <div class="online view-btn" (click)="openHyperLink(project.hyperlinks[1])">
                 <i class="bi bi-box-arrow-up-right"></i> Online
               </div>
 
@@ -96,7 +96,7 @@
 
     <div class="news-feed-container feed">
 
-      <div class="feed-title">news headlines</div>
+      <div class="heading">news headlines</div>
 
       <div class="weather-container">
         <!-- <span class="weather-item title">Weather: </span> -->
