--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -22,14 +22,14 @@
           </div>
           <div class="project-views">
             <span
-              class="view git-view"
+              class="view git-btn "
               (click)="openHyperLink(project.hyperlinks[0])"
             >
               <i class="bi bi-github"></i>
               GitHub
             </span>
             <span
-              class="view online-view"
+              class="view view-btn "
               (click)="openHyperLink(project.hyperlinks[1])"
             >
               <i class="bi bi-box-arrow-up-right"></i>
