--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -19,30 +19,27 @@ $font-size-lg: 18px;
 $font-size-xl: 26px;
 $font-size-xxl: 32px;
 
-/* -- LIGHT BACKGROUND COLORS -- */
-$light-neutral-bg-color: #ffffff;
-$light-primary-bg-color: #f8f9fa;
-$light-secondery-bg-color: #e5e5e5;
-$light-tertiary-bg-color: #778da9;
-
-
-/* -- NEUTRAL COLORS -- */
-$comp-default-font-color: #9b2226;
-
-$dark-neutral-bg-color: #415a77;
-$light-dark-bg-color: #284b63;
-$dark-primary-bg-color: #284b63;
-$dark-secondery-bg-color: #12202e;
-
-/* -- MISC COLORS -- */
-$error-color: red;
-
 /* -- SPACING SIZES -- */
 $spacing-xs: 6px;
 $spacing-sm: 10px;
 $spacing-md: 16px;
 $spacing-lg: 24px;
 $spacing-xl: 32px;
+
+/* -- LIGHT BACKGROUND COLORS -- */
+$light-neutral-bg-color: #ffffff;
+$light-primary-bg-color: #efefef;
+$light-secondery-bg-color: #e9ecef;
+$light-tertiary-bg-color: #778da9;
+
+/* -- NEUTRAL COLORS -- */
+$comp-default-font-color: #9b2226;
+$error-color: red;
+
+$dark-neutral-bg-color: #415a77;
+$light-dark-bg-color: #284b63;
+$dark-primary-bg-color: #284b63;
+$dark-secondery-bg-color: #12202e;
 
 /* -- BOX-SHADOWS -- */
 $light-box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
