--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -71,6 +71,7 @@
 
                 .project-description {
                      font-size: $font-size-md;
+
                     .project-views {
                         display: flex;
                         flex-direction: row;
@@ -81,21 +82,7 @@
                         margin-left: $spacing-sm;
 
                         .view {
-                            padding: $spacing-xs $spacing-md;
-                            background-color: $light-secondery-bg-color;
-                            border-radius: $spacing-xs - 1px;
-                            font-size: $font-size-xs;
-                            min-width: 70px;
-                            color: $light-neutral-font-color;
-                            cursor: pointer;
-
-                            &.git-view {
-                                background-color: $light-dark-bg-color;
-                            }
-
-                            &.online-view {
-                                color: red;
-                            }
+                          @include button;
                         }
 
                     }
