--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -11,6 +11,7 @@
         grid-template-columns: 1fr 1fr 1fr;
         column-gap: 25px;
         justify-items: center;
+        margin-top: 15px;
 
         .card {
             display: grid;
