Re-designed call-to-action section

--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -118,8 +118,8 @@
 
       <div class="news-container">
         <div class="news">
-          <img class="news-img" src="./img/misc/19.jpg" alt="recent project" />
-          <div class="news-headline">accident - n14</div>
+          <img class="news-img" src="./img/misc/shooting.jpg" alt="recent project" />
+          <div class="news-headline">shootings - KZN</div>
         </div>
 
         <div class="news">
