--- a/src/styles/pages/_skills-set.scss
+++ b/src/styles/pages/_skills-set.scss
@@ -41,7 +41,7 @@
                 .skill {
                     padding: $spacing-xs - 3px;
                     padding-left: $spacing-xs - 2px;
-                    background-color: $light-primary-bg-color;
+                    background-color: $light-secondery-bg-color;
                     border-radius: $spacing-xs;
 
                     i {
